<resources>
    <string name="app_name">GridImageSearch</string>
    <string name="search_label">Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="image_title_label">Image Title</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>

    <string name="action_setting">Setting</string>
    <string name="title_activity_search_setting">SearchSettingActivity</string>
    <string name="setting_title">Advanced search options</string>
    <string name="image_size_title">Image Size</string>
    <string name="color_filter_title">Color Filter</string>
    <string name="image_type_title">Image Type</string>
    <string name="site_filter_title">Site Filter</string>
    <string name="btn_save">Save</string>


</resources>
