<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:text="@string/setting_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textSize="@dimen/abc_text_size_large_material" android:textColor="#000000" android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_size_title"
            android:textColor="#000000"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spImageSize"
            android:entries="@array/image_sizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:layout_gravity="left"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_filter_title"
            android:textColor="#000000"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spImageColor"
            android:entries="@array/image_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:layout_weight="2"
            android:layout_gravity="left"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_type_title"
            android:textColor="#000000"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spImageType"
            android:entries="@array/image_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:layout_gravity="left"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site_filter_title"
            android:textColor="#000000"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/etSiteFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:layout_gravity="center"
        android:id="@+id/btnSave"
        />

</LinearLayout>